--- a/src/app/Component/AddUpdate/update-parent-matches/update-parent-matches.component.html
+++ b/src/app/Component/AddUpdate/update-parent-matches/update-parent-matches.component.html
@@ -1,7 +1,7 @@
 
 
 
-<div *ngIf="!showParentMatchesDiv" class="container">
+<div *ngIf="showParentMatchesDiv==-1" class="container">
     <div class="items1"> <img class="image-css" src="../../../../assets/nodatafound.jpeg" alt=""></div>
     <div class="items2"> <h2>  Opps !!! No Data Found in TBR DataBase......</h2>
         <input type="button" class="btn btn-info" style="margin-top: 8em;
