Final Version of phase2 Finfished

--- a/src/app/Component/AddUpdate/search-details/search-details.component.html
+++ b/src/app/Component/AddUpdate/search-details/search-details.component.html
@@ -54,10 +54,17 @@
                    </ol>
                 </td>
                 <td class="align-left-btn">
+                    
                     <input type="button"  style="width:50em;
                                                  height:3em;
                                                  margin-right:1em" class="btn btn-primary" value="OK" (click)="backtoHomePage()">
                 </td>
+            </tr>
+            <tr>
+                <td></td>
+                <td class="align-left-btn"><input type="button"  style="width:50em;
+                    height:3em;
+                    margin-right:1em" class="btn btn-primary" value="Back" (click)="backtoSearchParentMatches()"></td>
             </tr>
         </table>
     </div>
