--- a/src/app/Component/AddUpdate/update-view-details/update-view-details.component.html
+++ b/src/app/Component/AddUpdate/update-view-details/update-view-details.component.html
@@ -60,6 +60,13 @@
                             (click)="backtoHomePage()">
                     </td>
                 </tr>
+                <tr>
+                    <td></td>
+                    <td class="align-left-btn"><input type="button"  style="width:50em;
+                        height:3em;
+                        margin-right:1em;
+                        margin-top:2em" class="btn btn-info" value="Back to Parent Matches" (click)="backtoSearchParentMatches()"></td>
+                </tr>
             </table>
         </div>
     </div>
