--- a/src/app/Component/add-update-menu-tab/add-update-menu-tab.component.html
+++ b/src/app/Component/add-update-menu-tab/add-update-menu-tab.component.html
@@ -9,6 +9,8 @@
     </li>
     <li class="li-width"><a [routerLink]='["view"]' routerLinkActive="active"><span class="li-width">View</span></a>
     </li>
+    <li class="li-width"><a [routerLink]='["archiveView"]' routerLinkActive="active"><span class="li-width">Archive View</span></a>
+    </li>
     
   </ul>
 </div>
