--- a/src/app/Component/contact/contact.component.html
+++ b/src/app/Component/contact/contact.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<div style="background-color: #302f49;min-height: 455px;">
+<div style="background-color: #302f49;min-height: 400px">
     <div class="container">
         <div class="contact-form">
             <h2>Contact Us</h2>
