--- a/src/app/Component/AddUpdate/delete-parent-matches/delete-parent-matches.component.html
+++ b/src/app/Component/AddUpdate/delete-parent-matches/delete-parent-matches.component.html
@@ -1,4 +1,4 @@
-
+<div style="min-height: 400px;margin-top:-20px;background-color: #2196F3;">
 
 
 <div *ngIf="!showParentMatchesDiv" class="container">
@@ -43,4 +43,4 @@
     </div>
 </div>
 
-
+</div>
