--- a/src/app/Component/AddUpdate/delete-view-details/delete-view-details.component.html
+++ b/src/app/Component/AddUpdate/delete-view-details/delete-view-details.component.html
@@ -98,6 +98,14 @@
                                              margin-top: 10px;" class="btn btn-primary" value="Ok" (click)="backtoHomePage()">
                 </td>
             </tr>
+            <tr>
+                <td></td>
+                <td class="align-left-btn"><input type="button"  style="width:50em;
+                    height:3em;
+                    margin-right:1em;
+                    margin-top: 10px;
+                    margin-top:2em" class="btn btn-primary" value="Back" (click)="backtoSearchParentMatches()"></td>
+            </tr>
         </table>
     </div>
 
