--- a/src/app/Component/AddUpdate/view-archive/view-archive.component.css
+++ b/src/app/Component/AddUpdate/view-archive/view-archive.component.css
@@ -1,8 +1,9 @@
 
 
 
-  .back-ground{
+.back-ground{
     background : linear-gradient(135deg, #71b7e6, #9b59b6);
+    min-height:400px
   }
 
 
@@ -55,7 +56,7 @@
 }
 .inside-grid{
    background-color: aqua;
-   
+  
 }
 
 
@@ -77,6 +78,7 @@ h4{
   font-family: 'Courier New', Courier, monospace;
   font-size: 20px;
 }
+
 
 
 .container{
