--- a/src/app/Component/home/home.component.html
+++ b/src/app/Component/home/home.component.html
@@ -21,18 +21,18 @@
       <div class="work">
         <i class="fas fa-skiing"></i>
         <p class="work-heading">Skills</p>
-        <p class="work-text">I have a lot of skills and I am very good at them. I am very good at programming and I am always looking for new skills.</p>
+        <p class="work-text">I have a lot of skills and  very good at them. I am very good at programming and always looking for new skills.</p>
       </div>
       <div class="work">
         <i class="fas fa-ethernet"></i>
         <p class="work-heading">Network</p>
-        <p class="work-text">I have a lot of network skills and I am very good at them. I am very good at networking and I am always looking for new network skills.</p>
+        <p class="work-text"> I am very good at networking and  always looking for new network skills.</p>
       </div>
     </div>
     <div *ngIf="false" class="about-me">
       <div class="about-me-text">
         <h2>About Me</h2>
-        <p>I am a web developer and I love to create websites. I am a very good developer and I am always looking for new projects. I am a very good developer and I am always looking for new projects.</p>
+        <p>I am a web developer and  love to create websites. I am a very good developer and always looking for new projects</p>
       </div>
       <img src="../../../assets/sts.jpg" alt="me">
     </div>
@@ -41,7 +41,7 @@
     <div class="grid-test">
       <div class="grid-me-text">
         <h2>About Me</h2>
-        <p>I am a web developer and I love to create websites. I am a very good developer and I am always looking for new projects. I am a very good developer and I am always looking for new projects.</p>
+        <p>I am a web developer and  love to create websites.</p>
           
       </div>
       <div class="grid-me-text" >
