Contact Validations Added

--- a/src/app/Component/about/about.component.html
+++ b/src/app/Component/about/about.component.html
@@ -172,7 +172,9 @@
                           ></textarea>
                 <br>
             </div>
-            
+            <div *ngIf="allFiledsRequired">
+                <p *ngIf="allFiledsRequired" class="alert alert-danger">All Fileds are required</p>
+            </div>
                 <button type="submit" class="btn btn-outline-danger sizing-btn" >
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                         class="bi bi-send-check" viewBox="0 0 16 16">
