--- a/src/app/Component/login/login.component.html
+++ b/src/app/Component/login/login.component.html
@@ -4,7 +4,7 @@
 <div class="center-div">
   <form [formGroup]="loginForm" (ngSubmit)="AuthenticateUser()">
     <img  class="allign-main-logo" src="../../../assets/discord.png" alt="Azure Synapse Tool" width="80" height="80">
-    <h1 class="h3 mb-3 fw-normal">Please sign in to...</h1>
+    <h1 class="h3 mb-3 fw-normal">Please sign in to.....</h1>
 
     <div class="form-group">
       <label for="floatingInput">Username</label>
